<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_inbox"
            android:icon="@android:drawable/sym_action_email"
            android:title="@string/nav_inbox"
            android:checked="true"
            />
        <item
            android:id="@+id/nav_drafts"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_drafts"
            />
        <item
            android:id="@+id/nav_sent"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/nav_sent"
            />
        <item
            android:id="@+id/nav_trash"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/nav_trash"
            />
        <item
            android:id="@+id/nav_conversation"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_conversation"
            />
        <item
            android:id="@+id/nav_spam"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/nav_spam"
            />
        <item
            android:id="@+id/nav_indesirable"
            android:icon="@android:drawable/ic_menu_crop"
            android:title="@string/nav_indesirable"
            />
    </group>

    <item
        android:title="@string/nav_support"
        >
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_help"
                />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nav_feedback"
                />
        </menu>
    </item>

</menu>